...
                    context,
                    failMessage,
                    Toast.LENGTH_SHORT
                ).show()
            }
            uiState.exerciseEditingInput?.let {
                ExerciseForm(
                    state = it,
                    modifier = modifier,
                    onUserInputChange = onUserInputChange,
                    isEditMode = isEditMode
                )
            }
...
            onRecommendationChange = onUserInputChange
        )
        Button(
            onClick = { onUserInputChange(ExerciseEditingEvent.SaveChangesRequested(state)) },
            modifier = Modifier
                .fillMaxWidth()
                .testTag("SaveButton"),
            enabled = state.isValidForCreation()
        ) {
            val stringRes = if (isEditMode) R.string.update_exercise else R.string.create_exercise
            Text(stringResource(stringRes))
        }
    }
...
            modifier = Modifier.padding(bottom = Dimens.normal)
        )
        TextField(
            text = name,
            onTextChange = { onUserInputChange(ExerciseEditingEvent.NameChanged(it)) },
            label = stringResource(R.string.enter_exercise_name),
            modifier = Modifier.testTag("NameField")
        )
        Spacer(Modifier.height(Dimens.large))
        FormFieldLabel(
            text = stringResource(R.string.exercise_description_label),
            modifier = Modifier.padding(bottom = Dimens.normal)
        )
        TextField(
            text = description,
            onTextChange = { onUserInputChange(ExerciseEditingEvent.DescriptionChanged(it)) },
            label = stringResource(R.string.enter_exercise_description),
            minLines = 3,
            maxLines = 5,
            modifier = Modifier.testTag("DescriptionField")
        )
    }
}

@Composable
private fun CategorySelectionPanel(
...
