...
        TextField(
            text = query,
            onTextChange = onSearchQueryChanged,
            label = label,
            modifier = Modifier
                .padding(Dimens.normal)
                .testTag("SearchField")
        )
        CategoryFilters(
            modifier = Modifier.padding(
                bottom = Dimens.normal,
                start = Dimens.normal,
                end = Dimens.normal
...
