...
            if (trainings.isNotEmpty()) {
                TrainingsList(
                    trainings = trainings,
                    navigateToTrainingOverview = navigateToTrainingOverview
                )
            } else {
                NoDataMessage(
                    text = stringResource(id = R.string.no_trainings_info)
                )
            }
        }
    }
}
...
